<resources>
    <!-- MyMarketClient -->
    <string name="app_name">GT无人超市</string>

    <string name="loading">加载中...</string>
    <string name="load_done">加载完成</string>
    <string name="load_fail">加载失败</string>
    <string name="load_full">----我是有底线的----</string>

    <!-- Strings for header -->
    <string name="about_item">关于软件</string>
    <string name="user_item">用户管理</string>
    <string name="setting_item">应用管理</string>

    <!-- Strings related to login -->
    <string name="prompt_account">邮箱/手机号/用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_forget_password">忘记密码?</string>
    <string name="action_imm_register">立即注册</string>
    <string name="action_weixin_login">微信登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_account">非法账户</string>
    <string name="error_invalid_password">密码长度太短!</string>
    <string name="error_incorrect_password">密码不正确!</string>
    <string name="error_field_required">This field is required</string>
    <string name="username">账户</string>
    <string name="mobile_or_email">手机号或邮箱</string>
    <string name="user_login">登陆名</string>
    <string name="user_pass">密码</string>
    <string name="user_pass_confirm">确认密码</string>
    <string name="name">实名</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>

    <!-- Strings related to client main page -->
    <string name="scancode" >扫一扫</string>
    <string name="payment">付款</string>
    <string name="mydeal">我的消费</string>
    <string name="mydiscount">我的优惠</string>
    <string name="pointstore">积分商城</string>
    <string name="mypoint">我的积分</string>
    <string name="mybalance">电子零钱包</string>
    <string name="discountstore">优惠广场</string>
    <string name="week_account">最近一周消费</string>
    <string name="com.gthncz.mymarketclient.helper.ScrollRecyclerViewBehavior">com.gthncz.mymarketclient.helper.ScrollRecyclerViewBehavior</string>

    <!-- Strings related to user grant -->
    <string name="grant">授权</string>
    <string name="grant_confirm">确认授权</string>
    <string name="grant_msg">无人超市会员授权，将获取id，昵称, 头像, 积分和余额信息</string>
    <string name="check_grant_req">检查授权请求...</string>

    <!-- Strings related to user info -->
    <string name="user_management">用户管理</string>
    <string name="avatar">头像</string>
    <string name="user_nickname">昵称</string>
    <string name="mobile">手机</string>
    <string name="email">邮箱</string>
    <string name="user_exit">退出登陆</string>
    <string name="go_bind">去绑定</string>
    <string name="permission_read_external_storage_rational">更换头像需要读取内部存储, 请赋予权限!</string>

    <!-- Strings for settings -->
    <string name="setting">设置</string>
    <string name="notification">通知</string>
    <string name="receive_noification">接收通知</string>
    <string name="beep">响铃</string>
    <string name="vibration">振动</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="key_pref_notification">notification</string>
    <string name="key_pref_beep">beep</string>
    <string name="key_pref_vibration">vibration</string>

    <!-- Strings for pay status -->
    <string name="pay_wait">等待付款</string>
    <string name="pay_success">交易成功</string>
    <string name="pay_expire">交易超时</string>
    <string name="pay_cancel">交易取消</string>

    <!-- Strings for accounts -->
    <string name="account">账单</string>
    <string name="save">保存</string>
    <string name="change">更换</string>

    <!-- Strings for point store -->
    <string name="obtain">领取</string>
    <string name="point_10">10积分</string>

    <!-- Strings for my point -->
    <string name="current_points">当前积分</string>
    <string name="obtain_point">领取积分</string>
    <string name="point2balance">转成余额</string>
    <string name="exchange_num">转换数量</string>
    <string name="obtain_balance">获得余额(元)</string>

    <!-- Strings for my balance -->
    <string name="current_balance">当前余额(元)</string>
    <string name="inpour">充值</string>
    <string name="detail">明细</string>

    <!-- Strings for discount store -->
    <string name="obtain_discount">抢券</string>
    <string name="possessed_discount">已领券</string>
    <string name="expire_duration">有效期:</string>
    <string name="vip">VIP</string>
    <string name="all">ALL</string>

    <!-- Strings for balance pay -->
    <string name="check_payment_req">检查交易状态</string>
    <string name="pay_subject">交易名称</string>
    <string name="pay_id">交易单号</string>
    <string name="pay_pay_amount">支付金额</string>
    <string name="pay_time_start">创建时间</string>
    <string name="pay_input_password">请输入支付密码</string>
    <string name="pay_confirm">确认支付</string>
    <string name="paying">支付中</string>
    <string name="pay_password">支付密码</string>
    <string name="status_unset">未设置</string>
    <string name="modify">修改</string>

    <!-- Strings for modify pay password -->
    <string name="modity_pay_password_tip">请输入支付密码</string>
    <string name="modifying">修改中</string>

    <!-- Strings for about activity -->
    <string name="about_app">GT无人超市客户端是配套GT无人超市系统使用的，该项目只用于学习使用!交流请联系GT_GameEmail@163.com</string>

</resources>
