<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.RegisterActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar_register"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/back_white_16"
        >
        <TextView
            android:id="@+id/textView_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="title"
            />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frameLayout_register_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- step1 -->
        <ScrollView
            android:id="@+id/scrollView_register_step1_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/editText_register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_or_email"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/editText_register_user_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_login"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/editText_register_user_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_pass"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/editText_register_user_pass_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_pass_confirm"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/editText_register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <EditText
                        android:id="@+id/editText_register_verification_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/verification_code"
                        />

                    <Button
                        android:id="@+id/button_register_get_verification_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_verification_code"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/button_register_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>