<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout_item_footer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout_item_footer_load_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_full"
            android:drawablePadding="10dp"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_item_footer_load_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_done"
            android:drawableLeft="@drawable/load_done_16"
            android:drawablePadding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_item_footer_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="invisible"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:gravity="center"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_item_footer_load_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_fail"
            android:drawableLeft="@drawable/load_fail_16"
            android:drawablePadding="10dp"
            />
    </LinearLayout>

</FrameLayout>